--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="game">
     <div id="dino"></div>
-    <div id="cactus"></div>
+    <div id="rock"></div>
   </div>
 
   <h1 id="score">0</h1>
